tests/snapshots/cli_snapshot_tests__check_help.snap
---
source: tests/cli_snapshot_tests.rs
assertion_line: 56
expression: normalized
---
Check configuration validity and check for repository updates

Usage: common-repo check [OPTIONS]

Options:
  -c, --config <FILE>
          Path to the .common-repo.yaml configuration file to check

          [default: .common-repo.yaml]

      --cache-root <DIR>
          The root directory for the repository cache.

          If not provided, it defaults to the system's cache directory (e.g., `~/.cache/common-repo` on Linux). Can also be set with the `COMMON_REPO_CACHE` environment variable.

          [env: COMMON_REPO_CACHE=]

      --updates
          If set, the command will check for newer versions of the inherited repositories

      --color <WHEN>
          Colorize output (always, never, auto)

          [default: auto]

      --log-level <LEVEL>
          Set log level (error, warn, info, debug, trace)

          [default: info]

  -h, --help
          Print help (see a summary with '-h')
