tests/snapshots/cli_snapshot_tests__ls_help.snap
---
source: tests/cli_snapshot_tests.rs
expression: normalized
---
List files in the source composite built by the configuration

Usage: common-repo ls [OPTIONS]

Options:
  -c, --config <FILE>
          Path to the .common-repo.yaml configuration file

          [default: .common-repo.yaml]

      --cache-root <DIR>
          The root directory for the repository cache.

          Defaults to the system cache directory (`~/.cache/common-repo` on Linux, `~/Library/Caches/common-repo` on macOS). Can also be set with the `COMMON_REPO_CACHE` environment variable.

          [env: COMMON_REPO_CACHE=]

      --working-dir <DIR>
          The working directory for local file operations.

          If not provided, it defaults to the current working directory.

  -p, --pattern <PATTERN>
          Filter files by glob pattern (e.g., "*.rs", "src/**/*.ts")

  -l, --long
          Use long listing format showing size and permissions

  -s, --sort <SORT>
          Sort order for file listing

          Possible values:
          - name: Sort alphabetically by file name
          - size: Sort by file size
          - path: Sort by full path

          [default: name]

      --count
          Show only the total count of files

  -r, --reverse
          Reverse the sort order

      --color <WHEN>
          Colorize output (always, never, auto)

          [default: auto]

      --log-level <LEVEL>
          Set log level (error, warn, info, debug, trace)

          [default: info]

      --verbose...
          Increase output verbosity (can be repeated: --verbose --verbose)

          Overrides --log-level when specified: --verbose       = debug level --verbose -v    = trace level (combines with command -v flags)

      --quiet
          Suppress output except errors

          Overrides --log-level to show only error messages. Use for scripting or quiet operation.

  -h, --help
          Print help (see a summary with '-h')
