tests/snapshots/cli_snapshot_tests__main_help.snap
---
source: tests/cli_snapshot_tests.rs
expression: normalized
---
Common Repository - Manage repository configuration inheritance

Usage: common-repo [OPTIONS] <COMMAND>

Commands:
  add          Add a repository to the configuration file
  apply        Apply the .common-repo.yaml configuration to the current repository
  check        Check configuration validity and check for repository updates
  completions  Generate shell completion scripts
  diff         Show differences between current files and configuration result
  init         Initialize a new .common-repo.yaml configuration file
  update       Update repository refs to newer versions
  info         Show information about a repository or the current configuration
  ls           List files in the source composite built by the configuration
  validate     Validate a .common-repo.yaml configuration file
  cache        Manage repository cache
  tree         Display the repository inheritance tree
  help         Print this message or the help of the given subcommand(s)

Options:
      --color <WHEN>
          Colorize output (always, never, auto)

          [default: auto]

      --log-level <LEVEL>
          Set log level (error, warn, info, debug, trace)

          [default: info]

      --verbose...
          Increase output verbosity (can be repeated: --verbose --verbose)

          Overrides --log-level when specified: --verbose       = debug level --verbose -v    = trace level (combines with command -v flags)

      --quiet
          Suppress output except errors

          Overrides --log-level to show only error messages. Use for scripting or quiet operation.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
