tests/snapshots/cli_snapshot_tests__missing_config_error.snap
---
source: tests/cli_snapshot_tests.rs
assertion_line: 114
expression: error_line
---
Error: Configuration file not found: .common-repo.yaml
